--- a/css/ssscalc.css
+++ b/css/ssscalc.css
@@ -38,7 +38,8 @@ margin-bottom: 5px;
 
 #content {
   padding: 0px 20px 20px 20px;
-  width: 50%;
+  width: 40%;
+  min-width: 400px;
   margin: 0 auto;
   border: 2px solid black;
   border-radius: 10px;
