--- a/css/fftype.css
+++ b/css/fftype.css
@@ -1,12 +1,3 @@
-
-
- @font-face {
-     font-family: 'eorzearegular';
-     src: url('../font/eorzeaextended-webfont.woff2') format('woff2'), url('../font/eorzeaextended-webfont.woff') format('woff');
-     font-weight: normal;
-     font-style: normal;
-}
-
 @font-face {
     font-family: 'warsaw_gothiccondensed';
     src: url('../font/warsawgothiccond-webfont.woff2') format('woff2'),
@@ -18,16 +9,6 @@
 
 
 
-
-@font-face {
-    font-family: 'warsaw_gothiccondobl';
-    src: url('../font/warsawgothiccondobl-webfont.woff2') format('woff2'),
-         url('../font/warsawgothiccondobl-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 #title {
      font-family: 'warsaw_gothiccondensed';
      font-size: 40px;
@@ -38,8 +19,8 @@ margin-bottom: 5px;
 
 #content {
   padding: 0px 20px 20px 20px;
-  width: 40%;
-  min-width: 400px;
+  width: 20%;
+  min-width: 300px;
   margin: 0 auto;
   border: 2px solid black;
   border-radius: 10px;
@@ -48,11 +29,9 @@ margin-bottom: 5px;
 background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.0) , rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0.0)), url("../img/sssbg.png");
 }
 
-.fightcalc {
-display: none;
+textarea {
+width: 100%;
+height: 100px;
 }
 
-#res {
-display: none;
-}
 
