--- a/css/ffcommon.css
+++ b/css/ffcommon.css
@@ -40,8 +40,7 @@ margin-bottom: 5px;
 
 #content {
   padding: 0px 20px 20px 20px;
-  width: 40%;
-  min-width: 400px;
+  max-width: 80em;
   margin: 0 auto;
   border: 2px solid black;
   border-radius: 10px;
