--- a/css/fftimers.css
+++ b/css/fftimers.css
@@ -1,4 +1,22 @@
 div#timerslocal{
- color: #FF007F;
- font-size: 72px;
+font-weight: bold;
+
+font-size: 220%;
+text-align: center;
+}
+div#timerslocal span{
+    color: #FFF;
+    text-shadow: #101010 -2px -2px 0,#101010 2px -2px 0,#101010 2px 2px 0,#101010 -2px 2px 0,#101010 0 -2px 0,#101010 2px 0 0,#101010 0 2px 0,#101010 -2px 0 0;
+    background-color: #404040;
+    display: inline-block;
+    margin: 12px 0;
+    padding: 12px 36px;
+    font-family: "Droid Sans",Helvetica,sans-serif;
+    font-size: 36px;
+    line-height: 48px;
+    vertical-align: middle;
+    width: auto;
+    border-radius: 36px;
+    box-shadow: #000 1px 1px 4px;
+}
 }
