Make sites more responsive

--- a/css/ffmenu.css
+++ b/css/ffmenu.css
@@ -1,22 +1,47 @@
 
 .ffbtn{
-    display: inline-block;
+   display: inline-block;
     text-decoration: none;
-    color: initial;
-    color: white;
     font-family: monospace; 
-    font-size: 12px;
     font-weight: bold;
+    color: black;
+    z-index: 10;
+text-align: center;
+
+
+}
+
+@media screen and (max-width: 700px) {
+.ffbtn{
+background-color: #dbebfb;
+margin: 0.1em 0.1em 0.1em 0.1em;
+padding: 1px 1px 1px 1px;
+font-size: 3.5em;
+border-radius: 10px;
+border-width: 1px;
+border-color: black;
+border-style: solid;
+}
+.ffbtn:hover  
+{   
+    background-color: #f3dbfb;
+    z-index: 1000;
+}
+}
+@media screen and (min-width: 700px) {
+.ffbtn{
+     color: initial;
+    color: white;
+    font-size: 12px;
+    margin-left: -5px;
+    margin-right: -5px;
     background:url(../img/ffbuttoninactive.png) no-repeat;
     cursor:pointer;
     border:none;
     width:115px;
     height:21px;
-    margin-left: -5px;
-    margin-right: -5px;
-    z-index: 10;
-text-align: center;
 padding-top:3px;
+
 }
 
 .ffbtn:hover  
@@ -24,3 +49,6 @@ padding-top:3px;
     background:url(../img/ffbuttonactive.png) no-repeat;
     z-index: 1000;
 }
+}
+
+
