Make sites more responsive

--- a/css/ffmenu.css
+++ b/css/ffmenu.css
@@ -11,7 +11,7 @@ text-align: center;
 
 }
 
-@media screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
 .ffbtn{
 background-color: #dbebfb;
 margin: 0.1em 0.1em 0.1em 0.1em;
@@ -28,7 +28,7 @@ border-style: solid;
     z-index: 1000;
 }
 }
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 900px) {
 .ffbtn{
      color: initial;
     color: white;
