Make sites more responsive

--- a/css/ffmenu.css
+++ b/css/ffmenu.css
@@ -17,6 +17,7 @@ background-color: #dbebfb;
 margin: 0.1em 0.1em 0.1em 0.1em;
 padding: 1px 1px 1px 1px;
 font-size: 3em;
+width: 100%;
 border-radius: 10px;
 border-width: 1px;
 border-color: black;
