--- a/css/dsroster.css
+++ b/css/dsroster.css
@@ -28,6 +28,11 @@ width: 49%;
 .charimg{
     position: relative;
     z-index: -2;
+   width: 321px;
+}
+
+.chardiv{
+   width: 321px;
 }
  .top-left{
      position:absolute;
@@ -59,5 +64,19 @@ width: 49%;
 
 .chardivhide {
     display:none;
+}
+
+@media only screen and (max-width: 760px) {
+.checktoggle {
+width: 49%;
+}
+.charimg{
+
+   width: 100%;
+}
+
+.chardiv{
+   width: 100%;
+}
 }
  
