--- a/css/fftimers.css
+++ b/css/fftimers.css
@@ -4,7 +4,7 @@ font-weight: bold;
 font-size: 220%;
 text-align: center;
 }
-div#timerslocal span{
+div#timerslocal div span{
     color: #FFF;
     text-shadow: #101010 -2px -2px 0,#101010 2px -2px 0,#101010 2px 2px 0,#101010 -2px 2px 0,#101010 0 -2px 0,#101010 2px 0 0,#101010 0 2px 0,#101010 -2px 0 0;
     background-color: #404040;
