Itterative design of CV

--- a/layouts/_default/cv.html
+++ b/layouts/_default/cv.html
@@ -4,9 +4,10 @@
 	<section class="cv container text-monospace text-justified mt-3">
 	{{- partial "i18nlist.html" . -}}
 	  <h2 class="text-center">{{.Title}}</h2>
+	  <h5 class="text-center">{{ .Params.Subtitle }}</h5>
 	  
 	  <div id="cvheader">
-	  <img id="cvpic" class="roundedpic" src="https://placehold.it/128x128">
+	  <img id="cvpic" class="roundedpic" src="{{ "img/pic1.png" | absURL }}">
   <span>{{ .Description }}</span>	
 </div>
 	    <div id="cvcontent">{{ .Content }}</div>
