--- a/layouts/partials/i18nlist.html
+++ b/layouts/partials/i18nlist.html
@@ -1,10 +1,10 @@
 {{ if .IsTranslated }}
 <h4>{{ i18n "translations" }}</h4>
-
+<div id="translationslist">
     {{ range .Translations }}
 
-        <a id="translationslist" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a> 
+        <a href="{{ .Permalink }}">{{ .Language.LanguageName }}</a> 
 
     {{ end }}
-
+</div>
 {{ end }}
