Ensure nicer CV print

--- a/layouts/partials/i18nlist.html
+++ b/layouts/partials/i18nlist.html
@@ -1,6 +1,5 @@
 {{ if .IsTranslated }}
-<h4>{{ i18n "translations" }}</h4>
-<div id="translationslist">
+<div id="translationslist" class = "no-print">
     {{ range .Translations }}
 
         <a href="{{ .Permalink }}">{{ .Language.LanguageName }}</a> 
