--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,4 @@
+/* Global Style Overrides */
 @media print
 {    
     .no-print, .no-print *
@@ -6,6 +7,7 @@
     }
 }
 
+/* End Global Style Overrides */
 
 /* START CV STYLE! */
 
