Make language selection global

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,5 +11,6 @@
 		<a href='{{ "about" | absURL }}'><span class="btn btn-sm btn-outline-secondary">About</span></a>
 		<a href='{{ "post" | absURL }}'><span class="btn btn-sm btn-outline-success">Blog</span></a>
 		<a href='{{ "tags" | absURL }}'><span class="btn btn-sm btn-outline-warning">Tags</span></a>
+		{{- partial "i18nlist.html" . -}}
 	</nav>
 </head>
