--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 {{ if eq .Section "post"}}
 
 	<section class="container text-monospace text-justified mt-3">
-	  <h2>{{.Title}}aaaaaaaaa</h2>
+	  <h2>{{.Title}}</h2>
 	  <small class="text-secondary mb-5">Posted on {{ .PublishDate.Format "January 2, 2006" }} | {{.ReadingTime}} minute read</small>
 	  <p>{{ .Content }}</p>
 	  <code>tags:
@@ -14,7 +14,10 @@
 	    {{ if .Site.Params.disqus }}
 	      {{ template "_internal/disqus.html" . }}
 	    {{ else }}
-		<small class="mt-1">Please mail your comments to <a href="{{.Site.Params.email}}">{{.Site.Params.email}}</a></small><br>
+		<small class="mt-1">Please mail your comments to {{ if isset .Site.Params "email" }}
+<a href="mailto:{{ .Site.Param "email" }}?subject=RE: {{.Title}}">{{ .Site.Param "email" }}</a>{{ if isset .Site.Params "pubkey" }} <sup><a href="/{{ .Site.Param "pubkey" }}" download>pubkey</a></sup>
+{{ end }}
+{{ end }}</small><br>
 	    {{end}}
 	  </div>
 	</section>
