Add extra spacing to make CV more pleasant on small screens

--- a/layouts/_default/cv.html
+++ b/layouts/_default/cv.html
@@ -2,8 +2,8 @@
 
 
 	<section class="cv container text-monospace text-justified mt-3">
-	  <h2 class="text-center">{{ .Title }}</h2>
-	  <h5 class="text-center">{{ .Params.Subtitle }}</h5>
+	  <h2 class="extra-spacing text-center">{{ .Title }}</h2>
+	  <h5 class="extra-spacing text-center">{{ .Params.Subtitle }}</h5>
 	  
 	  <div id="cvheader">
 	  <img id="cvpic" class="roundedpic" src="{{ "img/pic1.png" | absURL }}">
